--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
 <body>
   <div class="page">
     <h1>some text</h1>
+    <h2>second text</h2>
+    <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, blanditiis.</h3>
   </div>
 
  
