--- a/index.html
+++ b/index.html
@@ -9,10 +9,187 @@
 </head>
 <body>
   <div class="page">
-    <h1>some text</h1>
-    <h2>second text</h2>
-    <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, blanditiis.</h3>
-  </div>
+    <header class="header__page">
+      <div class="header_page_nav container">
+        <div class="page__logo">
+          <embed type="image/svg+xml" alt="fad:logo-juce" src="https://cdn-eu.icons8.com/docs/YghdDQV0DEe-wJKiOKUXWw/RqGYqsNOLUWG3cMLoxLHuw.svg" /> 
+          <p class="page__logo_text">PayWISE</p>
+        </div>
+        <div class="header__nav_links">
+          <ul>
+            <li><a href="#" class="nav_link">Home</a></li>
+            <li><a href="#" class="nav_link">Features</a></li>
+            <li><a href="# class="nav_link"">cards</a></li>
+            <li><a href="#" class="nav_link">contact</a></li>
+          </ul>
+        </div>
+        <div class="header__btns">
+          <a href="#" class="nav_link">Log In</a>
+          <button class="main_btn">Sign Up</button>
+        </div>
+      </div>
+      <div class="header__page_hero container">
+          <div class="left__box">
+            <h1 class="page_tittle">Your next<br>online bank.</h1>
+            <div class="proposition">
+              <div class="proposition_block">
+                <p>6X</p>
+                <p>Lorem ipsum dolor sit amet,</p>
+              </div>
+              <div class="proposition_block">
+                <p>-15%</p>
+                <p>Lorem ipsum dolor sit amet,</p>
+              </div>
+              <div class="proposition_block">
+                <p>3M+</p>
+                <p>Lorem ipsum dolor sit amet,</p>
+              </div>
+            </div>
+            <button class="main_btn">Download Now</button>
+          </div>
+          <div class="right__box">
+            <img src="/src/img/hero.png" alt="foto girl">
+          </div>
+      </div>
+    </header>
+
+    <section class="card">
+      <h2 class="card__tittle">One Mission. Two Cards</h2>
+      <p class="main__text">We are providing our clients two cards for their one<br>mission and finance</p>
+      <div class="card__petal-block">
+        <div class="card__petal-1">
+          <div class="card_btn petal1-top">Petal 1</div>
+          <div class="card__tittle">Expanding Access<br>Through Technology.</div>
+          <ul class="card_list">
+            <li>	•	No annual fee (Late and returned less apply )</li>
+            <li>	•	$500 - $5,000 limits</li>
+            <li>	•	APRs 19.99% - 29.49%</li>
+            <li>	•	2% -10% cash back at select merchants</li>
+          </ul>
+          <div class="card_btn petal1-bottom">Learn More</div>
+          <div class="card__visacard_petal1">
+            <p class="visacard-tittle">VISA</p>
+            <p class="card__visacard-text">Total balance</p>
+            <p class="card__visacard-cash">$27,000.30</p>
+          </div>
+        </div>
+        <div class="card__petal-2">
+          <div class="card_btn petal2-top">Petal 2</div>
+          <div class="card__tittle">Responsible Credit<br>Without Fees.</div>
+          <ul class="card_list">
+            <li>No annual fee (Late and returned less apply )</li>
+            <li>$500 - $5,000 limits</li>
+            <li>APRs 19.99% - 29.49%</li>
+            <li>2% -10% cash back at select merchants</li>
+          </ul>
+          <div class="card_btn petal1-bottom">Learn More</div>
+          <div class="card__visacard_petal1">
+            <p class="visacard-tittle">VISA</p>
+            <p class="card__visacard-text">Total balance</p>
+            <p class="card__visacard-cash">$27,000.30</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="exchange">
+      <p class="exchange__tittle">Our Online And ATM<br>Exchange Rates</p>
+      <p class="main__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <div class="exchange__currency">
+        <div class="exchange__currency_top">
+          <p class="state">USD</p>
+          <p class="num">71,35</p>
+          <p class="num">76,55</p>
+        </div>
+        <div class="exchange__currency_bottom">
+          <p class="state">EUR</p>
+          <p class="num">84,98</p>
+          <p class="num">85,98</p>
+        </div>
+      </div>
+      <div class="exchange__sell">
+        <p class="main__text">i’d like to sell</p>
+        <div class="exchange__sell-top">
+          <p class="sell__num">10,000</p>
+          <p class="sell__curr">GR</p>
+        </div>
+        <p class="main__text">i’d like to sell</p>
+        <div class="exchange__sell-bottom">
+          <p class="sell__num">112,000</p>
+          <p class="sell__curr">GR</p>
+        </div>
+        <button class="sell__btn">Exchange Money</button>
+      </div>
+    </section>
+
+    <section class="global">
+      <p class="global__tittle">Our Global Services</p>
+      <p class="global__subtittle">we providing our clients two cards for their one<br>mission and finance</p>
+      <div class="global__main">
+        <div class="global__main_left">
+          <div class="global__main_card">
+            <p class="global__main_card-tittle">Bank Transfer</p>
+            <p class="global__main_card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+          <div class="global__main_card">
+            <p class="global__main_card-tittle">Bank Transfer</p>
+            <p class="global__main_card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+        </div>
+        <div class="global__main_center">
+          <img src="/src/img/global-svgrepo-com 1.png" alt="Earth" class="global__main_img">
+        </div>
+        <div class="global__main_right">
+          <div class="global__main_card green">
+            <p class="global__main_card-tittle">Bank Transfer</p>
+            <p class="global__main_card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+          <div class="global__main_card">
+            <p class="global__main_card-tittle">Bank Transfer</p>
+            <p class="global__main_card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer__page">
+      <div class="footer__main">
+        <div class="page__logo">
+          <embed type="image/svg+xml" alt="fad:logo-juce" src="https://cdn-eu.icons8.com/docs/YghdDQV0DEe-wJKiOKUXWw/RqGYqsNOLUWG3cMLoxLHuw.svg" /> 
+          <p class="page__logo_text">PayWISE</p>
+        </div>
+        <p class="subscribe">Subscribe to keep up with the latest news</p>
+        <input type="email" name="mail" id="put" >
+        <button type="submit" class="footer__sub"></button>
+        <p class="footer__text">by submitting this form,you acknowledge that you have the terms of our Privacy Statement</p>
+      </div>
+      <div class="footer__nav">
+        <ul class="left__links">
+          <li>Solutions</li>
+          <li>MasterCard</li>
+          <li>Vuitton</li>
+          <li>Gillette</li>
+          <li>Apple</li>
+          <li>General Electric</li>
+        </ul>
+        <ul class="right__links">
+          <li>Solutions</li>
+          <li>Home</li>
+          <li>About</li>
+          <li>Services</li>
+          <li>Contact</li>
+          <li>Term and conditions</li>
+        </ul>
+      </div>
+      <div class="footer__bottom">
+        <p class="copyrighy">Copyrighy @ Foodhub 2022</p>
+        <img src="/src/img/fb.png" alt="icon fb" class="footer__social">
+        <img src="/src/img/in.png" alt="icon linkedin" class="footer__social">
+        <img src="/src/img/x.png" alt="icon twiter" class="footer__social">
+        <img src="/src/img/inst.png" alt="icon instagram" class="footer__social">
+      </div>
+    </footer>  
+  </div> 
 
  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1U     yJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
