--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
             <h1 class="page_tittle">Your next<br>online bank.</h1>
             <div class="proposition">
               <div class="proposition_block">
-                <p>6X</p>
-                <p>Lorem ipsum dolor sit amet,</p>
+                <p class="num">6X</p>
+                <p class="main__text bile">Lorem ipsum dolor sit amet,</p>
               </div>
               <div class="proposition_block">
-                <p>-15%</p>
-                <p>Lorem ipsum dolor sit amet,</p>
+                <p class="num">-15%</p>
+                <p class="main__text bile">Lorem ipsum dolor sit amet,</p>
               </div>
               <div class="proposition_block">
-                <p>3M+</p>
-                <p>Lorem ipsum dolor sit amet,</p>
+                <p class="num">3M+</p>
+                <p class="main__text bile">Lorem ipsum dolor sit amet,</p>
               </div>
             </div>
             <button class="main_btn">Download Now</button>
