--- a/index.html
+++ b/index.html
@@ -48,25 +48,25 @@
             <button class="main_btn">Download Now</button>
           </div>
           <div class="right__box">
-            <img src="/src/img/hero.png" alt="foto girl">
+            <img src="../src/img/hero.png" alt="foto girl">
           </div>
       </div>
     </header>
 
-    <section class="card">
+    <section class="card container"> 
       <h2 class="card__tittle">One Mission. Two Cards</h2>
       <p class="main__text">We are providing our clients two cards for their one<br>mission and finance</p>
       <div class="card__petal-block">
         <div class="card__petal-1">
-          <div class="card_btn petal1-top">Petal 1</div>
+          <button class="card_btn petal1-top">Petal 1</button>
           <div class="card__tittle">Expanding Access<br>Through Technology.</div>
           <ul class="card_list">
-            <li>	•	No annual fee (Late and returned less apply )</li>
-            <li>	•	$500 - $5,000 limits</li>
-            <li>	•	APRs 19.99% - 29.49%</li>
-            <li>	•	2% -10% cash back at select merchants</li>
+            <li>No annual fee (Late and returned less apply )</li>
+            <li>$500 - $5,000 limits</li>
+            <li>APRs 19.99% - 29.49%</li>
+            <li>2% -10% cash back at select merchants</li>
           </ul>
-          <div class="card_btn petal1-bottom">Learn More</div>
+          <button class="card_btn petal1-bottom">Learn More</button>
           <div class="card__visacard_petal1">
             <p class="visacard-tittle">VISA</p>
             <p class="card__visacard-text">Total balance</p>
@@ -74,7 +74,7 @@
           </div>
         </div>
         <div class="card__petal-2">
-          <div class="card_btn petal2-top">Petal 2</div>
+          <button class="card_btn petal2-top">Petal 2</button>
           <div class="card__tittle">Responsible Credit<br>Without Fees.</div>
           <ul class="card_list">
             <li>No annual fee (Late and returned less apply )</li>
@@ -82,8 +82,8 @@
             <li>APRs 19.99% - 29.49%</li>
             <li>2% -10% cash back at select merchants</li>
           </ul>
-          <div class="card_btn petal1-bottom">Learn More</div>
-          <div class="card__visacard_petal1">
+          <button class="card_btn petal1-bottom">Learn More</button>
+          <div class="card__visacard_petal2">
             <p class="visacard-tittle">VISA</p>
             <p class="card__visacard-text">Total balance</p>
             <p class="card__visacard-cash">$27,000.30</p>
