--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="header__btns">
           <a href="#" class="nav_link">Log In</a>
-          <button class="main_btn">Sign Up</button>
+          <button class="main_btn"><a href="#">Sign Up</a></button>
         </div>
       </div>
       <div class="header__page_hero container">
