start servise media

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header class="header__page">
       <div class="header_page_nav container">
         <div class="page__logo">
-          <embed type="image/svg+xml" alt="fad:logo-juce" src="https://cdn-eu.icons8.com/docs/YghdDQV0DEe-wJKiOKUXWw/RqGYqsNOLUWG3cMLoxLHuw.svg" /> 
-          <p class="page__logo_text">PayWISE</p>
+          <a href="#"><embed type="image/svg+xml" alt="fad:logo-juce" src="https://cdn-eu.icons8.com/docs/YghdDQV0DEe-wJKiOKUXWw/RqGYqsNOLUWG3cMLoxLHuw.svg" /> </a>
+          <a href="#" class="page__logo_text-link"><p class="page__logo_text">PayWISE</p></a>
         </div>
         <div class="header__nav_links">
           <ul>
@@ -30,7 +30,7 @@
       </div>
       <div class="header__page_hero container">
           <div class="left__box">
-            <h1 class="page_tittle">Your next<br>online bank.</h1>
+            <h1 class="page_tittle">Your&nbsp;next<br>online&nbsp;bank.</h1>
             <div class="proposition">
               <div class="proposition_block">
                 <p class="num">6X</p>
@@ -60,7 +60,7 @@
         <div class="card__petal-block">
           <div class="card__petal-1">
             <button class="card_btn petal1-top">Petal 1</button>
-            <div class="card__tittle">Expanding Access<br>Through Technology.</div>
+            <div class="card__tittle_box">Expanding Access<br>Through Technology.</div>
             <ul class="card_list">
               <li>No annual fee (Late and returned less apply )</li>
               <li>$500 - $5,000 limits</li>
@@ -76,7 +76,7 @@
           </div>
           <div class="card__petal-2">
             <button class="card_btn petal2-top">Petal 2</button>
-            <div class="card__tittle">Responsible Credit<br>Without Fees.</div>
+            <div class="card__tittle_box-left">Responsible Credit<br>Without Fees.</div>
             <ul class="card_list">
               <li>No annual fee (Late and returned less apply )</li>
               <li>$500 - $5,000 limits</li>
@@ -97,31 +97,33 @@
     <section class="exchange container">
       <p class="exchange__tittle">Our Online And ATM<br>Exchange Rates</p>
       <p class="main__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      <div class="exchange__currency">
-        <div class="exchange__currency_top">
-          <p class="state">USD</p>
-          <p class="num">71,35</p>
-          <p class="num">76,55</p>
+      <div class="exchange__main">  
+        <div class="exchange__currency">
+          <div class="exchange__currency_top">
+            <p class="state">USD</p>
+            <p class="num">71,35</p>
+            <p class="num">76,55</p>
+          </div>
+          <div class="exchange__currency_bottom">
+            <p class="state">EUR</p>
+            <p class="num">84,98</p>
+            <p class="num">85,98</p>
+          </div>
         </div>
-        <div class="exchange__currency_bottom">
-          <p class="state">EUR</p>
-          <p class="num">84,98</p>
-          <p class="num">85,98</p>
+        <div class="exchange__sell">
+          <p class="main__text">i’d like to sell</p>
+          <div class="exchange__sell-top">
+            <p class="sell__num">10,000</p>
+            <p class="sell__curr">GR</p>
+          </div>
+          <p class="main__text">i’d like to sell</p>
+          <div class="exchange__sell-bottom">
+            <p class="sell__num">112,000</p>
+            <p class="sell__curr">GR</p>
+          </div>
+          <button class="sell__btn">Exchange Money</button>
         </div>
-      </div>
-      <div class="exchange__sell">
-        <p class="main__text">i’d like to sell</p>
-        <div class="exchange__sell-top">
-          <p class="sell__num">10,000</p>
-          <p class="sell__curr">GR</p>
-        </div>
-        <p class="main__text">i’d like to sell</p>
-        <div class="exchange__sell-bottom">
-          <p class="sell__num">112,000</p>
-          <p class="sell__curr">GR</p>
-        </div>
-        <button class="sell__btn">Exchange Money</button>
-      </div>
+      </div>  
     </section>
 
     <section class="global">
