--- a/index.html
+++ b/index.html
@@ -158,35 +158,39 @@
       </div>
     </section>
 
-    <footer class="footer__page">
-      <div class="container">  
-        <div class="footer__main">
-          <div class="page__logo">
-            <embed type="image/svg+xml" alt="fad:logo-juce" src="https://cdn-eu.icons8.com/docs/YghdDQV0DEe-wJKiOKUXWw/RqGYqsNOLUWG3cMLoxLHuw.svg" /> 
-            <p class="page__logo_text">PayWISE</p>
+    <footer class="footer__page ">
+      <div class="container">
+        <div class="page__logo">
+          <embed type="image/svg+xml" alt="fad:logo-juce" src="https://cdn-eu.icons8.com/docs/YghdDQV0DEe-wJKiOKUXWw/RqGYqsNOLUWG3cMLoxLHuw.svg" /> 
+          <p class="page__logo_text">PayWISE</p>
+        </div>  
+        <div class="column">
+          <div class="footer__main">
+            <p class="subscribe">Subscribe to keep up with the latest news</p>
+            <div class="footer__btn_box">
+              <input type="email" name="mail" id="put" placeholder="enter your email...">
+              <button type="submit" class="footer__sub">&#8594;</button>
+            </div>
+            <p class="footer__text">by submitting this form,you acknowledge that you have the terms of our Privacy Statement</p>
           </div>
-          <p class="subscribe">Subscribe to keep up with the latest news</p>
-          <input type="email" name="mail" id="put" >
-          <button type="submit" class="footer__sub"></button>
-          <p class="footer__text">by submitting this form,you acknowledge that you have the terms of our Privacy Statement</p>
-        </div>
-        <div class="footer__nav">
-          <ul class="left__links">
-            <li>Solutions</li>
-            <li>MasterCard</li>
-            <li>Vuitton</li>
-            <li>Gillette</li>
-            <li>Apple</li>
-            <li>General Electric</li>
-          </ul>
-          <ul class="right__links">
-            <li>Solutions</li>
-            <li>Home</li>
-            <li>About</li>
-            <li>Services</li>
-            <li>Contact</li>
-            <li>Term and conditions</li>
-          </ul>
+          <div class="footer__nav">
+            <ul class="left__links">
+              <li>Solutions</li>
+              <li>MasterCard</li>
+              <li>Vuitton</li>
+              <li>Gillette</li>
+              <li>Apple</li>
+              <li>General Electric</li>
+            </ul>
+            <ul class="right__links">
+              <li>Solutions</li>
+              <li>Home</li>
+              <li>About</li>
+              <li>Services</li>
+              <li>Contact</li>
+              <li>Term and conditions</li>
+            </ul>
+          </div>
         </div>
         <div class="footer__bottom">
           <p class="copyrighy">Copyrighy @ Foodhub 2022</p>
