--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <ul>
             <li><a href="#" class="nav_link">Home</a></li>
             <li><a href="#" class="nav_link">Features</a></li>
-            <li><a href="# class="nav_link"">cards</a></li>
+            <li><a href="#" class="nav_link">cards</a></li>
             <li><a href="#" class="nav_link">contact</a></li>
           </ul>
         </div>
@@ -142,7 +142,7 @@
             </div>
           </div>
           <div class="global__main_center">
-            <img src="/src/img/global-svgrepo-com 1.png" alt="Earth" class="global__main_img">
+            <img src="../src/img/global-svgrepo-com 1.png" alt="Earth" class="global__main_img">
           </div>
           <div class="global__main_right">
             <div class="global__main_card green">
