--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <button class="main_btn">Download Now</button>
           </div>
           <div class="right__box">
-            <img src="../src/img/hero.png" alt="foto girl">
+            <img src="src/img/hero.png" alt="foto girl">
           </div>
       </div>
     </header>
@@ -142,7 +142,7 @@
             </div>
           </div>
           <div class="global__main_center">
-            <img src="../src/img/global-svgrepo-com 1.png" alt="Earth" class="global__main_img">
+            <img src="src/img/global-svgrepo-com 1.png" alt="Earth" class="global__main_img">
           </div>
           <div class="global__main_right">
             <div class="global__main_card green">
